fixes spacing

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -174,6 +174,11 @@
     line-height: 1;
     margin-left: 4px;
     padding: 3px 5px;
+    transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -ms-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
 }
 
 .sidebar-show-hide .main-sidebar .sb-nav-item .sb-nav-link p {
@@ -181,15 +186,24 @@
     opacity: 0;
 }
 
-.sidebar-show-hide .main-sidebar .sb-nav-item .sb-nav-link {
-    padding-left: 17px;
+.sidebar-show-hide .main-sidebar .sb-nav-item .sb-nav-link .countbadge {
+    right: 10px;
+    top: 2px;
+}
+
+.main-sidebar .sb-nav-item .sb-nav-link .countbadge {
+    position: absolute;
+    right: 16px;
+    z-index: 1;
+    transform: scale(0.8);
+    will-change: transform;
+    transform-origin: 14px -22px;
 }
 
 .sidebar-show-hide .main-header nav.main-header {
     margin-left: 100px;
 }
 
-/* .sidebar-show-hide .sidebar-toggle i {transform: rotate(180deg); } */
 .sidebar-toggle i.fa-bars {
     font-style: normal;
 }
